# lambda-calculus-repl

./: .gitignore  .lambda-history  CHANGELOG.md  LICENSE  README.md  lambda-calculus-repl.cabal  package.yaml  stack.yaml
app/: Main.hs
src/LambdaCalculus/: Parser.hs  REPL.hs  Terms.hs
test/: ParserSuite.hs  Spec.hs  TestUtils.hs
